--- a/quiz/stylequiz.css
+++ b/quiz/stylequiz.css
@@ -161,3 +161,24 @@ body {
     font-size: 16px;
   }
 }
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.flash {
+  animation: flash 1s;
+  animation-iteration-count: 3;
+}
+
+.flash2 {
+  animation: flash 1s infinite;
+}
