.grid h2 color updated 1806

--- a/quiz/stylequiz.css
+++ b/quiz/stylequiz.css
@@ -35,7 +35,7 @@ body {
   background-color: #6eb8f0;
   font-size: 26px;
   text-align: center;
-  color: #fbf7fa;
+  color: #f00bb7;
   padding: 2px 0px;
 }
 
